--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@ yarn-error.log*
 .env.development.local
 .env.test.local
 .env.production.local
+env.example
+
 
 # Production builds
 client/build/
