--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "client": "cd client && npm start",
     "build": "cd client && npm run build",
     "install-client": "cd client && npm install",
+    "client-build": "cd client && npm run build",
+    "render-postbuild": "npm run install-client && npm run build",
     "heroku-postbuild": "npm run install-client && npm run build"
   },
   "keywords": ["weather", "mern", "react", "node", "express"],
@@ -24,5 +26,8 @@
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
